@@ -20,6 +20,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2021-11-09 [B] Correct install failure when single quote (') is used in db config {ron4mac}
 2021-10-07 [B] Correct more issues when running with PHP 8 (thanks to user altenae) {ron4mac}
 2021-10-07 [B] Correct some additional issues when running with PHP 8 {ron4mac}
 2021-09-24 [B] Correct conditions causing failures under PHP 8 {ron4mac}
